# multi-model-rag-system

./: controllers.py  main.py  pyproject.toml  requirements.txt  routes.py  services.py
database/: db.py
